--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,10 +6,71 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+        <meta name="description",
+          content="Checkout site with some titles" />
+    <title>{% block title %}{% endblock %}</title>
+
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+
+    <script src="{% static 'main/js/script.js' %}"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Manrope:wght@200..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<h1>hi</h1>
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav logo">SMTH</a>
+
+            <div class="nav_menu" id="nav-menu">
+                <ul class="nav_list">
+                    <li class="nav_item">
+                        <a href="#home" class="nav_link">
+                             <i class="fa-solid fa-house nav_icon"></i>
+                            <span class="nav_name">Home</span>
+                        </a>
+                    </li>
+
+                    <li class="nav_item">
+                        <a href="#about" class="nav_link">
+                            <i class="fa-solid fa-circle-info nav_icon"></i>
+                            <span class="nav_name">About</span>
+                        </a>
+                    </li>
+
+                    <li class="nav_item">
+                        <a href="#Works" class="nav_link">
+                            <i class="fa-solid fa-briefcase nav_icon"></i>
+                            <span class="nav_name">Works</span>
+                        </a>
+                    </li>
+
+                    <li class="nav_item">
+                        <a href="#Plans" class="nav_link">
+                            <i class="fa-solid fa-clipboard-list nav_icon"></i>
+                            <span class="nav_name">Plans</span>
+                        </a>
+                    </li>
+
+                    <li class="nav_item">
+                        <a href="#" class="nav_link">
+                            <i class="fa-solid fa-clipboard-list nav_icon"></i>
+                            <span class="nav_name">Plans</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
 
 </body>
 </html>
