--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -33,7 +33,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link">
+                        <a href="home" class="nav_link">
                              <i class="fa-solid fa-house nav_icon"></i>
                             <span class="nav_name">Home</span>
                         </a>
@@ -73,4 +73,6 @@
 
 
 </body>
+
+<script src="{% static 'main/js/script.js' %}"></script>
 </html>
