--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -78,15 +78,135 @@ img {
     margin-right: 1rem;
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--container-color);
+    z-index: var(--z-fixed);
+    transition: .4s;
+}
+
+.nav {
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_logo {
+    color: var()--title-color;
+    font-weight: 600;
+}
+
+@media screen and (max-width: 767px) {
+    .nav_menu {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: var(--container-color);
+        box-shadow: 0 -1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
+        width: 100%;
+        height: 4rem;
+        padding: 0 1rem;
+        display: grid;
+        align-content: center;
+        border-radius: 1.25rem 1.25rem 0 0;
+        transition: .4s;
+    }
+}
+
+.nav_list,
+.nav_link {
+    display: flex;
+}
+
+.nav_link {
+    flex-direction: column;
+    align-items: center;
+    row-gap: .25rem;
+    color: var(--title-color);
+    font-weight: 600;
+}
+
+.nav_list  {
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.nav_name {
+    font-size: var(--tiny-font-size);
+
+}
+
+.nav_icon {
+    font-size: 1.5rem;
+}
+
+.active {
+    position: relative;
+    color: red;
+    transition: .3s;
+
+}
+
+/*scroll header animation */
+.scroll-header {
+    box-shadow: 0 1px 12px hsla(var(--hue), var(--sat), 15%, 0.15);
+}
+
+/* for small devices */
+@media screen and (max-width: 320px) {
+    .nav_name {
+        display: none;
+    }
+}
+
+/* for medium devices */
+@media screen and (min-width: 576px) {
+    .nav_list {
+        justify-content: center;
+        column-gap: 3rem;
+    }
+}
+
+@media screen and (min-width: 767px) {
+
+    .nav {
+        height: calc(var(--header-height) + 1.5rem);
+    }
+
+    .nav_name {
+        font-size: var(--normal-font-size);
+        display: block;
+    }
+
+    .nav_icon {
+        display: none;
+        color: transparent;  /* fix later */
+        text-decoration: none;
+    }
+
+    .nav_link:hover {
+        color: red;
+    }
+}
 
 
+.nav_link {
+    text-decoration: none;
+}
 
 
+/* for large devices */
+@media screen and (min-width: 1024px) {
 
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
 
-
-
-
-
-
-
+}
