--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav logo">SMTH</a>
+            <a href="#" class="nav_logo">SMTH</a>
 
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
@@ -71,6 +71,11 @@
         </nav>
     </header>
 
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
 </body>
 
