nav + logo height

--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -28,7 +28,7 @@
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav_logo">SMTH</a>
+            <a href="#" class="nav_logo">MoneyMakers</a>
 
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
