--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -37,7 +37,8 @@ html {
 }
 
 body {
-    margin: var(--header-height) 0 0 0;
+    margin: 0;
+    padding: 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
@@ -48,34 +49,40 @@ ul {
     list-style: none;
 }
 
-a {
-    text-decoration: none;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 7vh;
+    width: 100vw;
+    z-index: var(--z-fixed);
+    transition: .4s;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
+.nav_logo {
+    text-decoration: none;
+    color: black;
+    font-size: var(--normal-font-size);
+    margin: 0;
+    padding: 0;
+    height: 7vh;
+    display: flex;
+    align-items: center;
 }
 
 
 .container {
     max-width: 968px;
+    padding: 0;
+    height: 7vh;
     margin-left: 1rem;
     margin-right: 1rem;
+
 }
 
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--container-color);
-    z-index: var(--z-fixed);
-    transition: .4s;
-}
 
 .nav {
-    height: var(--header-height);
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,6 +97,7 @@ img {
      transition: .2s;
      display: flex;
 }
+
 
 @media screen and (max-width: 767px) {
     .nav_menu {
@@ -116,6 +124,7 @@ img {
     row-gap: .25rem;
     color: var(--title-color);
     font-weight: 600;
+    text-decoration: none;
 }
 
 .nav_list  {
@@ -132,9 +141,7 @@ img {
 
 }
 
-.nav_icon {
-    font-size: 1.5rem;
-}
+
 
 .active {
     position: relative;
@@ -153,6 +160,10 @@ img {
     .nav_name {
         display: none;
     }
+
+    .nav_icon {
+    font-size: 1.5rem;
+}
 }
 
 /* for medium devices */
@@ -161,6 +172,10 @@ img {
         justify-content: center;
         column-gap: 3rem;
     }
+
+    .nav_icon {
+    font-size: 1.5rem;
+}
 }
 
 @media screen and (min-width: 767px) {
@@ -175,6 +190,7 @@ img {
     }
 
     .nav_icon {
+        font-size: 0;
         display: none;
         color: transparent;  /* fix later */
         text-decoration: none;
@@ -199,9 +215,6 @@ img {
 
 
 
-.nav_link {
-    text-decoration: none;
-}
 
 
 /* for large devices */
@@ -210,6 +223,7 @@ img {
     .container {
         margin-left: auto;
         margin-right: auto;
+        height: 7vh;
     }
 
 }
