--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -5,6 +5,26 @@
 
 {% block content %}
 
-    <h1 class="test" REFL-TEXT="HOME"><strong>HOME</strong></h1>
+    <div class="best_articles">
+        <div class="best_article">
+            <p class="art_title">Как снять деньги с кредитной карты без последствий. Свежий обзор</p>
+
+        </div>
+
+        <div class="best_article">
+            <p class="art_title">Выгодный накопительный счёт и карта: свежий обзор</p>
+        </div>
+        <div class="best_article">
+            <p class="art_title">Как снять деньги с кредитной карты без последствий. Свежий обзор</p>
+
+        </div>
+
+        <div class="best_article">
+            <p class="art_title">Выгодный накопительный счёт и карта: свежий обзор</p>
+        </div>
+
+
+
+    </div>
 
 {% endblock %}
