--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header class="header" id="header">
-        <nav class="nav container">
+        <nav class="nav_container">
             <a href="#" class="nav_logo">MoneyMakers</a>
 
             <div class="nav_menu" id="nav-menu">
