--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -46,8 +46,9 @@ body {
 
 main {
     min-height: 100vh;
-    margin-top: 7vh;
     width: 100vw;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +83,6 @@ nav {
     height: 100%;
     padding: 0;
     margin: 0;
-    background-color: red;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -98,7 +98,6 @@ nav {
     height: 100%;
     display: flex;
     align-items: center;
-    background-color: pink;
     font-weight: 600;
 }
 
@@ -107,7 +106,6 @@ nav {
 .nav_menu {
     height: 100%;
     padding-right: 2.8vw;
-    background-color: yellow;
 }
 
 
@@ -165,20 +163,24 @@ nav {
 
 
 .best_articles {
+    max-height: auto;
     min-height: 80vh;
     margin-top: 2vh;
     width: 90vw;
     display: grid;
+    position: relative;
+    top: 8vh;
+
     gap: 5%;
     grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
     /* grid-auto-flow: column; */
-    background-color: green;
 
 
 }
 
 .best_article {
     padding: 2%;
+    margin: 0;
     display: flex;
     align-items: end;
     max-width: 100%;
@@ -189,38 +191,67 @@ nav {
 
 }
 
+.best_article_1 {
+    background-image: url(../img/best_article_1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.best_article_2 {
+    background-image: url(../img/best_article_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
 
 
 .best_article p {
     margin: 0;
-    padding: 0;
+    margin-top: 1vh;
+    padding-right: 0;
     padding-left: 10%;
-    padding-top: 10%;
-
+    padding-top: 7%;
+    padding-bottom: 7%;
     font-size: 1.5rem;
-    max-width: 100%;
-    background-color: red;
+    min-width: 50%;
+    background-color: white;
+    border-radius: 30px;
 }
 
 
 
 /* for small devices */
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) {
     .nav_name {
         display: none;
     }
 
     .nav_icon {
     font-size: 1.5rem;
-}
+    }
+
+     .best_articles {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+     }
+
+    .best_article {
+        max-width: 30vw;
+        min-height: 30vw;
+        justify-self: start;
+     }
+
+
+
+
+
+
 }
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
-
-    main {
-        margin-top: 5vh;
-    }
 
     .nav_list {
         justify-content: center;
@@ -233,8 +264,12 @@ nav {
 
     .best_article {
         max-width: 50vw;
+        max-height: 50vw;
         justify-self: center;
      }
+
+
+
 
 }
 @media screen and (max-width: 767px) {
@@ -256,23 +291,19 @@ nav {
     }
 
     .best_article {
-        max-width: 50vw;
+        max-width: 60vw;
+        min-height: 60vw;
         justify-self: center;
      }
 
     .best_article p {
-        font-size: 1.3rem;
+        font-size: 1.15rem;
      }
-
 
 
 }
 
 @media screen and (min-width: 767px) {
-
-    main {
-        margin-top: 7vh;
-    }
 
     .nav {
         height: calc(var(--header-height) + 1.5rem);
@@ -304,9 +335,27 @@ nav {
 
     .best_article {
         max-width: 50vw;
+        max-height: 50vw;
+        margin-top:
         justify-self: center;
      }
 
 
+
+}
+
+
+@media screen and (max-width: 865px) {
+
+    .best_articles {
+        min-height: 100vh;
+        margin-top: 12vh;
+        padding-bottom: 150px;
+     }
+
+     .best_article {
+        max-width: 60vw;
+        min-height: 60vw;
+    }
 
 }
