--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -6,12 +6,12 @@
 {% block content %}
 
     <div class="best_articles">
-        <div class="best_article">
+        <div class="best_article best_article_1">
             <p class="art_title">Как снять деньги с кредитной карты без последствий. Свежий обзор</p>
 
         </div>
 
-        <div class="best_article">
+        <div class="best_article best_article_2">
             <p class="art_title">Выгодный накопительный счёт и карта: свежий обзор</p>
         </div>
 
