strange hover best article animation

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -7,8 +7,11 @@
 
     <div class="best_articles">
         <div class="best_article best_article_1">
-            <p class="art_title">Как снять деньги с кредитной карты без последствий. Свежий обзор</p>
-
+            <p class="art_title">Как снять деньги с кредитной карты без последствий</p>
+            <p class="short_content">Многие задаются вопросом, как снять деньги с кредитной карты
+                без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
+                за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
+                грабительские проценты.</p>
         </div>
 
         <div class="best_article best_article_2">
