--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -169,25 +169,25 @@ nav {
     width: 90vw;
     display: grid;
     position: relative;
-    top: 8vh;
-
+    top: 6vh;
     gap: 5%;
     grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
-    /* grid-auto-flow: column; */
-
-
 }
+
 
 .best_article {
     padding: 2%;
     margin: 0;
     display: flex;
     align-items: end;
+    flex-direction: column-reverse;
     max-width: 100%;
     min-height: 70vh;
     background-color: orange;
     text-align: left;
     border-radius: 30px;
+
+    position: relative;
 
 }
 
@@ -218,7 +218,29 @@ nav {
     min-width: 50%;
     background-color: white;
     border-radius: 30px;
+    transition: .4s;
+
 }
+
+
+.short_content {
+    /*display: none;  */
+    opacity: 0;
+    transition: .4s;
+    transform: translateY(-120px);
+}
+
+.best_article:hover .short_content {
+    transform: translateY(120px);
+    opacity: 1;
+    font-size: 1rem;
+}
+
+.best_article:hover .art_title {
+    transform: translateY(-300%);
+}
+
+
 
 
 
@@ -270,7 +292,6 @@ nav {
 }
 
 @media screen and (max-width: 767px) {
-
 
     .nav_menu {
         position: fixed;
@@ -348,8 +369,6 @@ nav {
         min-height: 70vw;
     }
 
-    .best_article p {
 
-    }
 
 }
