slide short info best article

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -7,15 +7,22 @@
 
     <div class="best_articles">
         <div class="best_article best_article_1">
-            <p class="art_title">Как снять деньги с кредитной карты без последствий</p>
-            <p class="short_content">Многие задаются вопросом, как снять деньги с кредитной карты
-                без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
-                за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
-                грабительские проценты.</p>
+            <h3 class="art_title">Как снять деньги с кредитной карты без последствий
+                <p class="short_content"><br/><br/><br/>Многие задаются вопросом, как снять деньги с кредитной карты
+                    без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
+                    за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
+                    грабительские проценты.</p>
+            </h3>
+
         </div>
 
         <div class="best_article best_article_2">
-            <p class="art_title">Выгодный накопительный счёт и карта: свежий обзор</p>
+            <h3 class="art_title">Выгодный накопительный счёт и карта: свежий обзор
+                <p class="short_content"><br/><br/><br/>Многие задаются вопросом, как снять деньги с кредитной карты
+                        без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
+                        за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
+                        грабительские проценты.</p>
+            </h3>
         </div>
 
 
