--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -207,7 +207,7 @@ nav {
 
 
 
-.best_article p {
+.best_article h3 {
     margin: 0;
     margin-top: 1vh;
     padding-right: 0;
@@ -224,21 +224,20 @@ nav {
 
 
 .short_content {
-    /*display: none;  */
+    display: none;
     opacity: 0;
+    font-size: 1rem;
     transition: .4s;
-    transform: translateY(-120px);
 }
 
 .best_article:hover .short_content {
-    transform: translateY(120px);
     opacity: 1;
-    font-size: 1rem;
+    height: auto;
+    width: auto;
+    display: inline;
+
 }
 
-.best_article:hover .art_title {
-    transform: translateY(-300%);
-}
 
 
 
@@ -265,7 +264,7 @@ nav {
         justify-self: start;
      }
 
-    .best_article p {
+    .best_article h3 {
         font-size: 0.8rem;
     }
 
@@ -314,7 +313,7 @@ nav {
         justify-self: center;
      }
 
-    .best_article p {
+    .best_article h3 {
         font-size: 1.15rem;
      }
 
