--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -7,7 +7,9 @@
 
     <div class="best_articles">
         <div class="best_article best_article_1">
-            <h3 class="art_title">Как снять деньги с кредитной карты без последствий
+            <h3 class="art_title">
+                <p class="relevant">Свежее</p>
+                <p class="text">Как снять деньги с кредитной карты без последствий</p>
                 <p class="short_content"><br/><br/><br/>Многие задаются вопросом, как снять деньги с кредитной карты
                     без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
                     за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
@@ -17,11 +19,13 @@
         </div>
 
         <div class="best_article best_article_2">
-            <h3 class="art_title">Выгодный накопительный счёт и карта: свежий обзор
+            <h3 class="art_title">
+                <p class="relevant">Свежее</p>
+                <p class="text">Как снять деньги с кредитной карты без последствий</p>
                 <p class="short_content"><br/><br/><br/>Многие задаются вопросом, как снять деньги с кредитной карты
-                        без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
-                        за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
-                        грабительские проценты.</p>
+                    без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
+                    за такие операции предусмотрена заградительная комиссия и сразу начинают начисляться
+                    грабительские проценты.</p>
             </h3>
         </div>
 
