--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -17,6 +17,13 @@
 
     --z-tooltip: 10;
     --z-fixed: 100;
+
+
+    --shadow-color-darker: rgba(128, 128, 128, 0.1);
+    --shadow-color-medium: rgba(128, 128, 128, 0.05);
+    --shadow-color: rgba(128, 128, 128, 0.02);
+    --blur-radius: 0px;
+
 }
 
 @media screen and (min-width: 968px) {
@@ -91,7 +98,7 @@ nav {
 .nav_logo {
     text-decoration: none;
     color: black;
-    font-size: var(--normal-font-size);
+    font-size: 1.8rem;
     padding: 0;
     margin: 0;
     padding-left: 2.8vw;
@@ -218,6 +225,8 @@ nav {
     position: relative;
 }
 
+
+
 .relevant {
     font-size: 4rem;
     z-index: 2000;
@@ -227,6 +236,37 @@ nav {
     text-align: center;
     font-weight: 800;
     color: rgba(0, 0, 0, 0.7);
+
+    text-shadow:
+      1px 1px var(--blur-radius) var(--shadow-color-darker),
+      2px 2px var(--blur-radius) var(--shadow-color-darker),
+      4px 3px var(--blur-radius) var(--shadow-color-darker),
+      6px 4px var(--blur-radius) var(--shadow-color-darker),
+      8px 5px var(--blur-radius) var(--shadow-color-darker),
+      10px 6px var(--blur-radius) var(--shadow-color-darker),
+      12px 7px var(--blur-radius) var(--shadow-color-darker),
+      14px 8px var(--blur-radius) var(--shadow-color-darker),
+      16px 9px var(--blur-radius) var(--shadow-color-darker),
+      18px 10px var(--blur-radius) var(--shadow-color-darker),
+      20px 11px var(--blur-radius) var(--shadow-color-medium),
+      22px 12px var(--blur-radius) var(--shadow-color-medium),
+      24px 13px var(--blur-radius) var(--shadow-color-medium),
+      26px 14px var(--blur-radius) var(--shadow-color-medium),
+      28px 15px var(--blur-radius) var(--shadow-color-medium),
+      30px 16px var(--blur-radius) var(--shadow-color-medium),
+      32px 17px var(--blur-radius) var(--shadow-color-medium),
+      34px 18px var(--blur-radius) var(--shadow-color-medium),
+      36px 19px var(--blur-radius) var(--shadow-color),
+      38px 20px var(--blur-radius) var(--shadow-color),
+      40px 21px var(--blur-radius) var(--shadow-color),
+      42px 22px var(--blur-radius) var(--shadow-color),
+      44px 23px 10px var(--shadow-color),
+      46px 24px 10px var(--shadow-color),
+      48px 25px 10px var(--shadow-color),
+      50px 26px 10px var(--shadow-color),
+      52px 27px 10px var(--shadow-color),
+      54px 28px 10px var(--shadow-color),
+      56px 29px 10px var(--shadow-color);
 }
 
 .text {
@@ -234,6 +274,7 @@ nav {
     font-size: 1.7rem;
     transition: .65s;
     padding-left: 10%;
+    padding-right: 8%;
 }
 
 .short_content {
@@ -251,32 +292,7 @@ nav {
 
 
 
-/* for small devices */
-@media screen and (max-width: 400px) {
-    .nav_name {
-        display: none;
-    }
 
-    .nav_icon {
-    font-size: 1.5rem;
-    }
-
-     .best_articles {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-     }
-
-    .best_article {
-        max-width: 30vw;
-        min-height: 30vw;
-        justify-self: start;
-     }
-
-    .best_article h3 {
-        font-size: 0.8rem;
-    }
-
-}
 
 /* for medium devices */
 @media screen and (min-width: 576px) {
@@ -315,18 +331,64 @@ nav {
 
     }
 
+
+
+     .nav_logo {
+        font-size: 1.5rem;
+     }
+
+     .short_content {
+        display: none;
+     }
+
+     .relevant {
+        font-size: 2rem;
+     }
+
+    .text {
+        transform: translateY(0);
+        padding-top: 10%;
+        font-size: 1.5rem;
+    }
+}
+
+/* for small devices */
+@media screen and (max-width: 400px) {
+    .nav_name {
+        display: none;
+    }
+
+    .nav_icon {
+    font-size: 1.5rem;
+    }
+
+     .best_articles {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+     }
+
     .best_article {
-        max-width: 80vw;
-        min-height: 80vw;
+        max-width: 30vw;
+        min-height: 30vw;
         justify-self: center;
      }
 
-    .best_article h3 {
-        font-size: 1.15rem;
+     .relevant {
+        font-size: 1.4rem;
      }
 
+    .text {
+        transform: translateY(0);
+        padding-top: 10%;
+        font-size: 1rem;
+        }
+    .short_content {
+        display: none;
+     }
 
 }
+
+
 
 @media screen and (min-width: 767px) {
 
@@ -383,10 +445,9 @@ nav {
      }
 
      .best_article {
-        max-width: 70vw;
-        min-height: 70vw;
+        max-width: 85vw;
+        min-height: 85vw;
+        justify-self: center;
     }
-
-
 
 }
