--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -12,7 +12,6 @@
 
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
 
-    <script src="{% static 'main/js/script.js' %}"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
@@ -63,7 +62,7 @@
                     <li class="nav_item">
                         <a href="#" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
-                            <span class="nav_name">Plans</span>
+                            <span class="nav_name">FAQ</span>
                         </a>
                     </li>
                 </ul>
@@ -80,4 +79,6 @@
 </body>
 
 <script src="{% static 'main/js/script.js' %}"></script>
+
+
 </html>
