--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -20,7 +20,7 @@
 
         <div class="best_article best_article_2">
             <h3 class="art_title">
-                <p class="relevant">Свежее</p>
+                <p class="relevant">Рекомендуем</p>
                 <p class="text">Как снять деньги с кредитной карты без последствий</p>
                 <p class="short_content"><br/><br/><br/>Многие задаются вопросом, как снять деньги с кредитной карты
                     без процентов и с сохранением льготного периода. Если делать это напрямую, то обычно
