--- a/better_site/main/templates/main/layout.html
+++ b/better_site/main/templates/main/layout.html
@@ -39,28 +39,28 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="#about" class="nav_link">
+                        <a href="about" class="nav_link">
                             <i class="fa-solid fa-circle-info nav_icon"></i>
                             <span class="nav_name">About</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
-                        <a href="#Works" class="nav_link">
+                        <a href="Works" class="nav_link">
                             <i class="fa-solid fa-briefcase nav_icon"></i>
                             <span class="nav_name">Works</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
-                        <a href="#Plans" class="nav_link">
+                        <a href="Plans" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
                             <span class="nav_name">Plans</span>
                         </a>
                     </li>
 
                     <li class="nav_item">
-                        <a href="#" class="nav_link">
+                        <a href="FAQ" class="nav_link">
                             <i class="fa-solid fa-clipboard-list nav_icon"></i>
                             <span class="nav_name">FAQ</span>
                         </a>
