--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -59,6 +59,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 /*    overflow-y: scroll;
     overflow-x: hidden;  */
     z-index: 1;
@@ -172,7 +173,7 @@ nav {
 .best_articles {
     max-height: auto;
     min-height: 80vh;
-    margin-top: 2vh;
+    margin-top: 5vh;
     width: 90vw;
     display: grid;
     position: relative;
@@ -291,6 +292,86 @@ nav {
     padding-left: 10%;
     padding-right: 10%;
 }
+
+.recommendations {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    margin-top: 10vh;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.list_articles {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100vw;
+    padding: 0;
+}
+
+.arrow {
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: white;
+    padding: 0 1%;
+}
+
+
+.list_articles ul {
+    display: grid;
+    margin: 0;
+    padding: 0;
+    grid-template-columns: repeat(auto-fit, 3);
+    gap: 3%;
+    grid-auto-flow: column;
+    width: 100vw;
+    overflow-x: scroll;
+}
+
+.list_articles ul::-webkit-scrollbar {
+    display: none;
+}
+
+.list_articles ul li {
+    width: 27vw;
+    height: 15vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.article {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    margin: 0;
+    padding: 0 2%;
+    background-image: url(../img/best_article_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 20px;
+}
+
+.article p {
+    background-color: red;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(17px);
+    padding: 5%;
+    margin: 2% 0;
+}
+
 
 
 
