--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -57,4 +57,62 @@
 
     </div>
 
+    <div class="info">
+        <h2>
+            <span>Some info about us</span>
+        </h2>
+
+        <p>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.
+                Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur.</span>
+        </p>
+    </div>
+
+<!--    <div class="shit">-->
+<!--        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit,-->
+<!--                sed do eiusmod tempor incididunt ut labore et dolore magna-->
+<!--                aliqua. Ut enim ad minim veniam, quis nostrud exercitation-->
+<!--                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis-->
+<!--                aute irure dolor in reprehenderit in voluptate velit esse-->
+<!--                cillum dolore eu fugiat nulla pariatur.</span>-->
+<!--    </div>-->
+
 {% endblock %}
