--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -78,10 +78,23 @@
 
     <div class="container">
             <div class="scroll_text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                <ul>
+                    <li>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </li>
+                    <li>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </li>
+                </ul>
+
+                <ul aria-hidden="true">
+                    <li>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </li>
+                    <li>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </li>
+                </ul>
             </div>
 
 <!--            <div class="scroll_text" aria-hidden="true">-->
