--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -80,23 +80,24 @@
             <div class="scroll_text">
                 <ul>
                     <li>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                       <p>Кредитные карты</p>
                     </li>
                     <li>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                       <p>Кредитные карты</p>
                     </li>
+
                 </ul>
 
                 <ul aria-hidden="true">
                     <li>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                       <p>Кредитные карты</p>
                     </li>
                     <li>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                       <p>Кредитные карты</p>
                     </li>
-                </ul>
-            </div>
 
+
+            </div>
 <!--            <div class="scroll_text" aria-hidden="true">-->
 <!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>-->
 <!--                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>-->
